--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="Images/Anuj_logo_New.png" class="logo">
+                <img src="Anuj_logo_New.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-columm-1">
-                    <img src="Images/Anuj_About.jpg" alt="">
+                    <img src="Anuj_About.jpg" alt="">
                 </div>
                 <div class="about-columm-2">
                     <h1 class="sub-title">About Me</h1>
@@ -81,21 +81,21 @@
                     <i class="fa-solid fa-file-invoice"></i>
                     <h2>Data Analytics Virtual Internship by AICTE</h2>
                     <p>Data Analytics Virtual Internship offered by AICTE, gaining skills in data processing, analysis, and visualization. Reflects his hands-on experience in applying key data analytics techniques.</p>
-                    <a href="Certificates/Data Analytics Virtual Internship_AICTE.pdf">View</a>
+                    <a href="Data Analytics Virtual Internship_AICTE.pdf">View</a>
 
                 </div>
                 <div>
                     <i class="fa-solid fa-file-invoice"></i>
                     <h2>Forage Data Analytics and Visualization Job Simulation</h2>
                     <p>The Data Analytics and Visualization Job Simulation offered by Forage in January 2024. The program covered practical skills in project understanding, data cleaning, modeling, visualization, and client presentation.</p>
-                    <a href="Certificates/Accenture_By_Forage.pdf">View</a>
+                    <a href="Accenture_By_Forage.pdf">View</a>
                     
                 </div>
                 <div>
                     <i class="fa-solid fa-file-invoice"></i>
                     <h2>AWS Cloud Masterclass - Discovery Day</h2>
                     <p>AWS Cloud Masterclass - Discovery Day on March 3, 2022. The event provided foundational insights into AWS cloud technologies and services.</p>
-                    <a href="Certificates/AWS Cloud Masterclass.pdf">View</a>
+                    <a href="AWS Cloud Masterclass.pdf">View</a>
                     
                 </div>
             </div>
@@ -109,7 +109,7 @@
             <h1 class="sub-title">My Projects</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="Images/Automated Code Review Tool.jpg" >
+                    <img src="Automated Code Review Tool.jpg" >
                     <div class="layer">
                         <h3>Automated Code Review Tool</h3>
                         <p>This tool 
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/Voice Base Email System.jpg" >
+                    <img src="Voice Base Email System.jpg" >
                     <div class="layer">
                         <h3>Voice Base Email System</h3>
                         <p>Web application which 
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Images/C-CURE.jpg" >
+                    <img src="C-CURE.jpg" >
                     <div class="layer">
                         <h3>Covid Cure</h3>
                         <p>The application 
@@ -159,7 +159,7 @@
                         <a href="https://x.com/Anya_10_"><i class="fa-brands fa-square-x-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/anujgangane/"><i class="fa-brands fa-linkedin"></i></i></a>
                     </div>
-                    <a href="Certificates/Anuj_Gangane_Resume.pdf" download="" class="btn">Download Resume</a>
+                    <a href="Anuj_Gangane_Resume.pdf" download="" class="btn">Download Resume</a>
                 </div>
                 <div class="contact-right">
                     <form action="" name="submit-to-google-sheet">
